Fix align and outline.

--- a/godlike.scss
+++ b/godlike.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+&:active, &:hover, &:focus {
+    outline: 0;
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -43,7 +47,6 @@ a, img, input, button, textarea, optgroup, select {
     line-height: inherit;
     text-transform: inherit;
     text-shadow: inherit;
-    outline: none;
     border: none;
     background: none;
     box-shadow: none;
@@ -54,9 +57,6 @@ a, img, input, button, textarea, optgroup, select {
 a {
     cursor: pointer;
     text-decoration: none;
-    &:active, &:hover, &:focus {
-        outline: 0;
-    }
 }
 
 // Add default animation
@@ -114,24 +114,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 ul, ol {
-    margin: 0 0 10px;
+    margin: 0 0 1em;
     padding: 0;
     -moz-padding: 0;
     -webkit-padding: 0;
     list-style: none;
     ul, ol{
         margin: 0;
+        padding: 0 0 0 1em;
     }
-}
-
-// Fix align counter
-ol {
-    counter-reset: count;
-    li {
+    > li {
         &:before {
-            content: counter(count) '.';
-            counter-increment: count;
-            padding-right: .3em;
+            padding-right: .5em;
         }
     }
 }
@@ -142,8 +136,31 @@ p, form {
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+
+    // Fix align marker
     ul {
-        list-style: disc;
+        > li {
+            &:before {
+                content: '•';
+                font-family: Tahoma;
+            }
+            li{
+                &:before {
+                    content: '○';
+                }
+            }
+        }
+    }
+
+    // Fix align counter
+    ol {
+        counter-reset: count;
+        > li {
+            &:before {
+                content: counter(count) '.';
+                counter-increment: count;
+            }
+        }
     }
 }
 
@@ -159,7 +176,6 @@ p {
 table {
     border-spacing: 0;
     border-collapse: collapse;
-    outline: none;
 }
 
 td, th {
